added step execution timing and overall timings.